--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <!-- TODO: Erase one of these two. Replace the 'href' link below with a link to your WebGL build page. -->
 <ul>
-<li><a href="https://slowhei.itch.io/p1-gold">The Legend of Zelda (Unity Remaster)</a></li>
+<li><a href="https://asabnis.itch.io/zelda-gold">The Legend of Zelda (Unity Remaster)</a></li>
 </ul>
 
 <!-- TIP: Rename this file "index.html", and it will become the default landing page whenever someone navigates their browser to your domain. -->
