Added project implementation details

--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
 
 <h2>Projects</h2>
 
-<!-- TODO: Erase one of these two. Replace the 'href' link below with a link to your WebGL build page. -->
 <ul>
 <li><a href="https://asabnis.itch.io/zelda-gold">The Legend of Zelda (Unity Remaster)</a></li>
 </ul>
 
-<!-- TIP: Rename this file "index.html", and it will become the default landing page whenever someone navigates their browser to your domain. -->
+<h3>Details</h3>
+
+<ul>
+<li>I implemented the knockback system, automated grid-based movement for enemies, and the zombie ray-gun.</li>
+<li>Technologies: C#, Unity</li>
+</ul>
+
 </html>
