Added more project implementation details

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h3>Details</h3>
 
 <ul>
-<li>I implemented the knockback system, automated grid-based movement for enemies, and the zombie ray-gun.</li>
+<li>I implemented the knockback system, automated grid-based movement for enemies, the sword, the zombie ray-gun, and many embedded map features.</li>
 <li>Technologies: C#, Unity</li>
 </ul>
 
