Added stuff from resume

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <h3>Details</h3>
 
 <ul>
-<li>I implemented the knockback system, automated grid-based movement for enemies, the sword, the zombie ray-gun, and many embedded map features.</li>
+<li>Designed modular components and a character inheritance hierarchy to minimize code duplication</li>
+<li>Implemented the knockback system, enemy pathfinding AIs, various weapons, and many embedded map features.</li>
 <li>Technologies: C#, Unity</li>
 </ul>
 
