--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
 <h2>Projects</h2>
 
 <ul>
-<li><a href="https://asabnis.itch.io/zelda-gold">The Legend of Zelda (Unity Remaster)</a></li>
+    <li><a href="https://asabnis.itch.io/zelda-gold">The Legend of Zelda (Unity Remaster)</a></li>
+    <li>Designed modular components and a character inheritance hierarchy to minimize code duplication</li>
+    <li>Implemented the knockback system, enemy pathfinding AIs, various weapons, and many embedded map features.</li>
+    <li>Technologies: C#, Unity</li>
 </ul>
 
-<h3>Details</h3>
-
 <ul>
-<li>Designed modular components and a character inheritance hierarchy to minimize code duplication</li>
-<li>Implemented the knockback system, enemy pathfinding AIs, various weapons, and many embedded map features.</li>
-<li>Technologies: C#, Unity</li>
+    <li><a href="https://asabnis.itch.io/space-warpers">Space Warpers -- Warp Through Portals And Blast Enemy Space Ships!</a></li>
+    <li>Utiilized the Event Bus paradigm to decouple components and maintain portability</li>
+    <li>Used basic vector geometry to implement portals</li>
+    <li>Technologies: C#, Unity, Adobe Photoshop</li>
 </ul>
 
 </html>
