Added project 3 with Will's itch io link

--- a/index.html
+++ b/index.html
@@ -18,4 +18,10 @@
     <li>Technologies: C#, Unity, Adobe Photoshop</li>
 </ul>
 
+<h3><a href="https://personman32.itch.io/tennis-hero">Tennis Hero</a></h3>
+<ul>
+    <li>I contributed to the player movement mechanics, racket mechanics/tennis ball interactions, VFX, SFX, and UI</li>
+    <li>Technologies: C#, Unity</li>
+</ul>
+
 </html>
